src/objects/Pearson_Course_Equivalent__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the association between the  Course and the Pearson Course Code is Active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>This contains the Course.</description>
        <inlineHelpText>This contains the Course.</inlineHelpText>
        <label>Course/Catalog Code</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Pearson Course Equivalent</relationshipLabel>
        <relationshipName>Pearson_Course_Equivalent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Course_Code_Name_f__c</fullName>
        <description>Used to display Pearson Course Code Name on Related List</description>
        <formula>Pearson_Course_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pearson Course Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Course_Code__c</fullName>
        <description>This contains the Pearson Course Code.</description>
        <inlineHelpText>This contains the Pearson Course Code.</inlineHelpText>
        <label>Pearson Course Code</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Pearson Course Equivalent</relationshipLabel>
        <relationshipName>Pearson_Course_Equivalent</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the Pearson Course Code is the Primary Pearson Course Code for the Course.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Pearson Course Equivalent</label>
    <nameField>
        <displayFormat>CPCS-{000000}</displayFormat>
        <label>Pearson Course Equivalent	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pearson Course Equivalent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>